--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-javascript": "^0.19.7",
     "@uiw/react-codemirror": "^4.5.1",
     "antd": "^4.18.9",
+    "js-beautify": "^1.14.3",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/js-beautify": "^1.13.3",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.13",
     "@types/styled-components": "^5.1.24",
